--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
@@ -33,32 +32,19 @@
                 <h3 class="text-muted">pong</h3>
             </div>
 
-
             <div class="row marketing">
                 <div class="col-lg-6">
-                    <canvas tabindex="1" id="pong"></canvas>
+                    <canvas id="pong" tabindex="1" width="640" height="480"></canvas>
                 </div>
             </div>
 
-
         </div>
-
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
 
         <!-- build:js scripts/plugins.js -->
         <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
@@ -75,8 +61,13 @@
         <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js({app,.tmp}) scripts/main.js -->
-        <script src="scripts/main.js"></script>
+        <!-- build:js({app,.tmp}) scripts/game.js -->
+        <script src="scripts/game.js"></script>
+        <script src="scripts/entity.js"></script>
+        <script src="scripts/background.js"></script>
+        <script src="scripts/ball.js"></script>
+        <script src="scripts/paddles.js"></script>
+        <script src="scripts/pong.js"></script>
         <!-- endbuild -->
 </body>
 </html>
