Ball class now uses angular momentum in the update() method.

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,11 @@
                 </div>
             </div>
 
+            <div id="vector"></div>
+            <div id="velocity"></div>
+            <div id="player-velocity"></div>
+            <div id="bot-velocity"></div>
+
         </div>
 
         <!-- build:js scripts/vendor.js -->
