Tinkered with the logic to make it more fair

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,9 @@
             <div id="vector"></div>
             <div id="velocity"></div>
             <div id="player-velocity"></div>
+            <div id="player-y"></div>
             <div id="bot-velocity"></div>
+            <div id="bot-y"></div>
 
         </div>
 
