--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="/">Home</a></li>
                 </ul>
                 <h3 class="text-muted">pong</h3>
             </div>
